Added Open API files + some syntax and bug fixing